src/Antlr/lib/DE6Parser.js
// Generated from ../src/Antlr/DE6Parser.g4 by ANTLR 4.9.1
// jshint ignore: start
import antlr4 from 'antlr4';
import DE6ParserListener from './DE6ParserListener.js';
import DE6ParserVisitor from './DE6ParserVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class DE6Parser extends antlr4.Parser {

    static grammarFileName = "DE6Parser.g4";
    static literalNames = [ null, null, null, null, null, null, "'?'", "':'", 
                            null, null, null, "','", "'echo'", "'='", "'!='", 
                            "'~'", "'!~'", "':='", "'?='", "'describe'", 
                            "'hidden'", "'const'", "'immutable'", "'export'", 
                            "'removeAllPrivateTags'", "'version'", "'['", 
                            "']'", "'/'", "'-'", null, null, null, null, 
                            null, null, "'{'", null, "'}'" ];
    static symbolicNames = [ null, "PUBLIC_GROUP", "PVT_GROUP", "PUBLIC_ELEMENT", 
                             "PVT_ELEMENT", "HEXDIGIT_WILDCARD", "TEST_SYMBOL", 
                             "TEST_SEPERATOR", "ITEM_WILDCARD", "SEQ_WILDCARD", 
                             "WS", "COMMA", "ECHO", "EQUALS", "NOT_EQUALS", 
                             "MATCHES", "NOT_MATCHES", "ASSIGN", "ASSIGN_IF_EXISTS", 
                             "DESCRIBE", "HIDDEN_TOKEN", "CONST_TOKEN", 
                             "IMMUTABLE_TOKEN", "EXPORT", "REMOVE_ALL_PRIVATE_TAGS", 
                             "VERSION_WORD", "LEFT_BRACKET", "RIGHT_BRACKET", 
                             "SLASH", "DELETE_OPERATOR", "INTEGER", "FLOAT", 
                             "ID", "COMMENT", "NEWLINE", "STRING", "OPEN", 
                             "PVT_CREATOR_ID", "CLOSE" ];
    static ruleNames = [ "script", "separator", "statement", "action", "assign_if_exists", 
                         "assignment", "lvalue", "value", "term", "variable", 
                         "number", "termlist", "method", "de_function", 
                         "deletion", "echo", "conditional_statement", "condition", 
                         "conditionOperator", "initialization", "description", 
                         "de_export", "removeAllPrivateTags", "version", 
                         "tag", "element", "seq_element", "tagpath", "itemnumber", 
                         "seq_wildcard", "public_tag", "pvt_tag" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DE6Parser.ruleNames;
        this.literalNames = DE6Parser.literalNames;
        this.symbolicNames = DE6Parser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	script() {
	    let localctx = new ScriptContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DE6Parser.RULE_script);
	    var _la = 0; // Token type
	    try {
	        this.state = 85;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 65;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===DE6Parser.COMMENT || _la===DE6Parser.NEWLINE) {
	                this.state = 64;
	                this.separator();
	            }

	            this.state = 67;
	            this.match(DE6Parser.EOF);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===DE6Parser.COMMENT || _la===DE6Parser.NEWLINE) {
	                this.state = 68;
	                this.separator();
	            }

	            this.state = 71;
	            this.statement();
	            this.state = 77;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 72;
	                    this.separator();
	                    this.state = 73;
	                    this.statement(); 
	                }
	                this.state = 79;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	            }

	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===DE6Parser.COMMENT || _la===DE6Parser.NEWLINE) {
	                this.state = 80;
	                this.separator();
	            }

	            this.state = 83;
	            this.match(DE6Parser.EOF);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	separator() {
	    let localctx = new SeparatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DE6Parser.RULE_separator);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===DE6Parser.COMMENT) {
	                this.state = 87;
	                this.match(DE6Parser.COMMENT);
	            }

	            this.state = 90;
	            this.match(DE6Parser.NEWLINE);
	            this.state = 93; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DE6Parser.COMMENT || _la===DE6Parser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DE6Parser.RULE_statement);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 95;
	            this.action();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 96;
	            this.conditional_statement();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 97;
	            this.method();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 98;
	            this.initialization();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 99;
	            this.description();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 100;
	            this.de_export();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 101;
	            this.removeAllPrivateTags();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 102;
	            this.version();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	action() {
	    let localctx = new ActionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DE6Parser.RULE_action);
	    try {
	        this.state = 110;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 105;
	            this.assignment();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 106;
	            this.assign_if_exists();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 107;
	            this.deletion();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 108;
	            this.initialization();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 109;
	            this.echo();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign_if_exists() {
	    let localctx = new Assign_if_existsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DE6Parser.RULE_assign_if_exists);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.lvalue();
	        this.state = 113;
	        this.match(DE6Parser.ASSIGN_IF_EXISTS);
	        this.state = 114;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DE6Parser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.lvalue();
	        this.state = 117;
	        this.match(DE6Parser.ASSIGN);
	        this.state = 118;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lvalue() {
	    let localctx = new LvalueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DE6Parser.RULE_lvalue);
	    try {
	        localctx = new TagpathLvalueContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.tagpath();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, DE6Parser.RULE_value);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.term();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, DE6Parser.RULE_term);
	    try {
	        this.state = 129;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new NumberTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.number();
	            break;

	        case 2:
	            localctx = new StringTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 125;
	            this.match(DE6Parser.STRING);
	            break;

	        case 3:
	            localctx = new TagPathTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 126;
	            this.tagpath();
	            break;

	        case 4:
	            localctx = new FunctionTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 127;
	            this.de_function();
	            break;

	        case 5:
	            localctx = new IdTermContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 128;
	            this.variable();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, DE6Parser.RULE_variable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(DE6Parser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, DE6Parser.RULE_number);
	    try {
	        this.state = 135;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DE6Parser.INTEGER:
	            localctx = new IntvalueContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 133;
	            this.match(DE6Parser.INTEGER);
	            break;
	        case DE6Parser.FLOAT:
	            localctx = new FloatvalueContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 134;
	            this.match(DE6Parser.FLOAT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	termlist() {
	    let localctx = new TermlistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, DE6Parser.RULE_termlist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.term();
	        this.state = 142;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===DE6Parser.COMMA) {
	            this.state = 138;
	            this.match(DE6Parser.COMMA);
	            this.state = 139;
	            this.term();
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	method() {
	    let localctx = new MethodContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, DE6Parser.RULE_method);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.match(DE6Parser.ID);
	        this.state = 146;
	        this.match(DE6Parser.LEFT_BRACKET);
	        this.state = 148;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DE6Parser.PUBLIC_GROUP) | (1 << DE6Parser.PVT_GROUP) | (1 << DE6Parser.SEQ_WILDCARD) | (1 << DE6Parser.INTEGER) | (1 << DE6Parser.FLOAT))) !== 0) || _la===DE6Parser.ID || _la===DE6Parser.STRING) {
	            this.state = 147;
	            this.termlist();
	        }

	        this.state = 150;
	        this.match(DE6Parser.RIGHT_BRACKET);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	de_function() {
	    let localctx = new De_functionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, DE6Parser.RULE_de_function);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(DE6Parser.ID);
	        this.state = 153;
	        this.match(DE6Parser.LEFT_BRACKET);
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DE6Parser.PUBLIC_GROUP) | (1 << DE6Parser.PVT_GROUP) | (1 << DE6Parser.SEQ_WILDCARD) | (1 << DE6Parser.INTEGER) | (1 << DE6Parser.FLOAT))) !== 0) || _la===DE6Parser.ID || _la===DE6Parser.STRING) {
	            this.state = 154;
	            this.termlist();
	        }

	        this.state = 157;
	        this.match(DE6Parser.RIGHT_BRACKET);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deletion() {
	    let localctx = new DeletionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, DE6Parser.RULE_deletion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.match(DE6Parser.DELETE_OPERATOR);
	        this.state = 160;
	        this.lvalue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	echo() {
	    let localctx = new EchoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, DE6Parser.RULE_echo);
	    try {
	        this.state = 165;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 162;
	            this.match(DE6Parser.ECHO);
	            this.state = 163;
	            this.value();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 164;
	            this.match(DE6Parser.ECHO);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	conditional_statement() {
	    let localctx = new Conditional_statementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, DE6Parser.RULE_conditional_statement);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.condition();
	        this.state = 168;
	        this.match(DE6Parser.TEST_SYMBOL);
	        this.state = 169;
	        this.action();
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DE6Parser.TEST_SEPERATOR) {
	            this.state = 171;
	            this.match(DE6Parser.TEST_SEPERATOR);
	            this.state = 172;
	            this.action();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, DE6Parser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.value();
	        this.state = 176;
	        this.conditionOperator();
	        this.state = 177;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	conditionOperator() {
	    let localctx = new ConditionOperatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, DE6Parser.RULE_conditionOperator);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DE6Parser.EQUALS) | (1 << DE6Parser.NOT_EQUALS) | (1 << DE6Parser.MATCHES) | (1 << DE6Parser.NOT_MATCHES))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	initialization() {
	    let localctx = new InitializationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, DE6Parser.RULE_initialization);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(DE6Parser.ID);
	        this.state = 182;
	        this.match(DE6Parser.ASSIGN);
	        this.state = 183;
	        this.value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	description() {
	    let localctx = new DescriptionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, DE6Parser.RULE_description);
	    try {
	        this.state = 197;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new DescribeNamedVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 185;
	            this.match(DE6Parser.DESCRIBE);
	            this.state = 186;
	            this.match(DE6Parser.ID);
	            this.state = 187;
	            this.match(DE6Parser.STRING);
	            break;

	        case 2:
	            localctx = new DescribeHiddenVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 188;
	            this.match(DE6Parser.DESCRIBE);
	            this.state = 189;
	            this.match(DE6Parser.ID);
	            this.state = 190;
	            this.match(DE6Parser.HIDDEN_TOKEN);
	            break;

	        case 3:
	            localctx = new DescribeConstantVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 191;
	            this.match(DE6Parser.DESCRIBE);
	            this.state = 192;
	            this.match(DE6Parser.ID);
	            this.state = 193;
	            this.match(DE6Parser.CONST_TOKEN);
	            break;

	        case 4:
	            localctx = new DescribeImmutableVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 194;
	            this.match(DE6Parser.DESCRIBE);
	            this.state = 195;
	            this.match(DE6Parser.ID);
	            this.state = 196;
	            this.match(DE6Parser.IMMUTABLE_TOKEN);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	de_export() {
	    let localctx = new De_exportContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, DE6Parser.RULE_de_export);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        this.match(DE6Parser.EXPORT);
	        this.state = 200;
	        this.match(DE6Parser.ID);
	        this.state = 201;
	        this.match(DE6Parser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	removeAllPrivateTags() {
	    let localctx = new RemoveAllPrivateTagsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, DE6Parser.RULE_removeAllPrivateTags);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.match(DE6Parser.REMOVE_ALL_PRIVATE_TAGS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	version() {
	    let localctx = new VersionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, DE6Parser.RULE_version);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205;
	        this.match(DE6Parser.VERSION_WORD);
	        this.state = 206;
	        this.match(DE6Parser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tag() {
	    let localctx = new TagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, DE6Parser.RULE_tag);
	    try {
	        this.state = 210;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DE6Parser.PUBLIC_GROUP:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 208;
	            this.public_tag();
	            break;
	        case DE6Parser.PVT_GROUP:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 209;
	            this.pvt_tag();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element() {
	    let localctx = new ElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, DE6Parser.RULE_element);
	    try {
	        this.state = 214;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DE6Parser.PUBLIC_GROUP:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 212;
	            this.public_tag();
	            break;
	        case DE6Parser.PVT_GROUP:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 213;
	            this.pvt_tag();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


